// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox query "Eth" in searchbox, show suggsetions 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <ul
    class="suggestions align-right"
  >
    <li
      class="suggestion focused"
    >
      <a
        href="/learn/"
      >
        <span
          class="page-title"
        >
          Learn Ethereum
        </span>
         
        <!---->
      </a>
    </li>
    <li
      class="suggestion"
    >
      <a
        href="/enterprise/"
      >
        <span
          class="page-title"
        >
          Ethereum for Enterprise
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;

exports[`SearchBox query "Satoshi" in searchbox, but no suggsetions return 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <!---->
</div>
`;

exports[`SearchBox query "Standards" in searchbox, return headers 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <ul
    class="suggestions align-right"
  >
    <li
      class="suggestion focused"
    >
      <a
        href="/developers/#standards"
      >
        <span
          class="page-title"
        >
          Developers Resources
        </span>
         
        <span
          class="header"
        >
          &gt; Standards
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`SearchBox render searchbox before focus 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class=""
    spellcheck="false"
  />
   
  <!---->
</div>
`;

exports[`SearchBox suggestions keyup.down 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <ul
    class="suggestions align-right"
  >
    <li
      class="suggestion"
    >
      <a
        href="/learn/"
      >
        <span
          class="page-title"
        >
          Learn Ethereum
        </span>
         
        <!---->
      </a>
    </li>
    <li
      class="suggestion focused"
    >
      <a
        href="/enterprise/"
      >
        <span
          class="page-title"
        >
          Ethereum for Enterprise
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;

exports[`SearchBox suggestions keyup.enter 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <!---->
</div>
`;

exports[`SearchBox suggestions keyup.up 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <ul
    class="suggestions align-right"
  >
    <li
      class="suggestion"
    >
      <a
        href="/learn/"
      >
        <span
          class="page-title"
        >
          Learn Ethereum
        </span>
         
        <!---->
      </a>
    </li>
    <li
      class="suggestion focused"
    >
      <a
        href="/enterprise/"
      >
        <span
          class="page-title"
        >
          Ethereum for Enterprise
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;

exports[`SearchBox unfocus suggestions 1`] = `
<div
  class="search-box"
>
  <input
    aria-label="Search"
    autocomplete="off"
    class="focused"
    spellcheck="false"
  />
   
  <ul
    class="suggestions align-right"
  >
    <li
      class="suggestion"
    >
      <a
        href="/learn/"
      >
        <span
          class="page-title"
        >
          Learn Ethereum
        </span>
         
        <!---->
      </a>
    </li>
    <li
      class="suggestion"
    >
      <a
        href="/enterprise/"
      >
        <span
          class="page-title"
        >
          Ethereum for Enterprise
        </span>
         
        <!---->
      </a>
    </li>
  </ul>
</div>
`;
